<resources>
    <string name="app_name">Monet Generator</string>
    <string name="about_author">Created by Jamal2367</string>
    <string name="about_feedback">To Telegram</string>
    <string name="about_info">This application is not supported/produced by Telegram or MiXplorer.</string>
    <string name="about_sources">View Source Code</string>
    <string name="about">About</string>
    <string name="assistance">Assistance</string>
    <string name="dark_button_text">Create dark theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="help">Help</string>
    <string name="light_button_text">Create light theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="mixplorer">MiXplorer</string>
    <string name="mix_generator_info">\"Share\" dialog will be opened with the generated theme. Select MiXplorer and save it to the internal storage. Pack the .xml file into a .mit file and then import it.</string>
    <string name="telegram_x">Telegram X</string>
    <string name="telegram">Telegram &amp; Plus</string>
    <string name="tg_generator_info">\"Share\" dialog will be opened with the generated theme. Choose Telegram or Plus Messenger and save it to \"Saved Messages\" or other place.</string>
    <string name="tgx_generator_info">\"Share\" dialog will be opened with the generated theme. Choose Telegram X and save it to \"Saved Messages\" or other place.</string>
    <string name="version">Version: %1$s (%2$s)</string>
</resources>