<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonMixLight"
            style="@style/Widget.App.ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/light_button_text"
            app:icon="@drawable/ic_twotone_light_mode_24" />

        <Button
            android:id="@+id/buttonMixDark"
            style="@style/Widget.App.ButtonStyle"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:text="@string/dark_button_text"
            app:icon="@drawable/ic_twotone_dark_mode_24" />
    </LinearLayout>

    <Button
        android:id="@+id/infoMIX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.App.ButtonStyle"
        android:layout_gravity="bottom|end"
        app:icon="@drawable/ic_twotone_help_24"
        android:text="@string/help"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>