<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.App.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/ic_twotone_info_24" />

            <TextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:text="@string/tg_generator_info"
                android:textColor="@color/system_accent_color"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLight"
            style="@style/Widget.App.ButtonStyle"
            android:layout_width="match_parent"

            android:text="@string/light_button_text"
            app:icon="@drawable/ic_twotone_light_mode_24" />

        <Button
            android:id="@+id/buttonDark"
            style="@style/Widget.App.ButtonStyle"
            android:layout_width="match_parent"

            android:layout_gravity="center"
            android:text="@string/dark_button_text"
            app:icon="@drawable/ic_twotone_dark_mode_24" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>