<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.App.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_twotone_palette_24" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textColor="@color/system_accent_color"
                            android:textSize="16sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/version"
                            style="@style/TextAppearance.Material3.BodyMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/app_name"
                            android:textColor="@color/system_accent_color" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/system_accent_color" />

                <LinearLayout
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_twotone_person_24" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/about_author"
                        android:textColor="@color/system_accent_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/system_accent_color" />

                <LinearLayout
                    android:id="@+id/source"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_github_24" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/about_sources"
                        android:textColor="@color/system_accent_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/system_accent_color" />

                <LinearLayout
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_telegram_24" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/about_feedback"
                        android:textColor="@color/system_accent_color"
                        android:textSize="16sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/system_accent_color" />

                <LinearLayout
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_twotone_info_24" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/about_info"
                        android:textColor="@color/system_accent_color"
                        android:textSize="16sp"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
